manifests/jenkins-depoyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
spec:
  selector:
    matchLabels:
      app:  jenkins # has to match .spec.template.metadata.labels
  #serviceName: "not-applicable"
  replicas: 1 # by default is 1
  template:
    metadata:
      labels:
        app: jenkins # has to match .spec.selector.matchLabels
    spec:
      containers:
      - name: jenkins
        image: nexus:8082/jenkins:latest 
        ports:
        - containerPort: 8080
          protocol: TCP
        #envFrom:
        #  - configMapRef:
        #      name: rabbitmq-config
        #  - secretRef:
        #      name: rabbitmq-secret
