manifests/goviolin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: goviolin
spec:
  selector:
    app: goviolin
  ports:
  - name:  http  
    port: 8080
    targetPort: 8080
    protocol: TCP

  type: ClusterIP
