manifests/jenkins-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  selector:
    app: jenkins
  ports:
    port: 8080
    targetPort: 8080
  type: NodePort
