manifests/nexus-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nexus
spec:
  selector:
    app: nexus
  ports:
  - name: http
    port: 8081
    targetPort: 8081
  type: NodePort
