manifests/devops-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - jenkins.dashboard
    - nexus.dashboard
    secretName: ingress 
  rules:
  - host: jenkins.dashboard
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 8080

  - host: nexus.dashboard
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nexus
            port:
              number: 8081
