manifests/goviolin-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  #annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - goviolin.com
    secretName: ingress
  rules:
  - host: goviolin.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: goviolin
            port:
              name: http
